Fixed alot of alignment issues of displayed comic books

--- a/comiclysm-app/src/app/comic-card/comic-card.component.css
+++ b/comiclysm-app/src/app/comic-card/comic-card.component.css
@@ -1,7 +1,7 @@
 .comic-card-container{ 
     display: block;
     float: left;
-    width: 15%;
+    width: 100%;
     margin: 0 auto; 
     margin: 0 15px;
 }
@@ -13,6 +13,11 @@
 }
 
 .comic-name {
+    width: 100%;
     font-size: 16px;
     text-align: center;
+}
+
+.comic-img { 
+    width: 100%;
 }
