--- a/comiclysm-app/src/app/main-comic-list/main-comic-list.component.css
+++ b/comiclysm-app/src/app/main-comic-list/main-comic-list.component.css
@@ -12,6 +12,7 @@
     margin: 0 auto;
     float: left;
     display: block;
+    width: 15%;
 }
 
 
@@ -23,7 +24,6 @@
 .paginationItems { 
     flex-wrap: nowrap;
     margin: 0 auto;
-    float: left;
     display: inline-block;
 }
 
